# coinbase-hft

./: .gitignore  pyproject.toml
coinbase_hft/: __init__.py  __main__.py  cli.py
coinbase_hft/backtesting/: backtest_engine.py  data_loader.py  performance.py
coinbase_hft/config/: loader.py  logging.yaml  settings.yaml  smm_settings.yaml
coinbase_hft/core/: clock.py  engine.py  event_bus.py
coinbase_hft/execution/: fill_model.py  live_executor.py  order_manager.py  paper_executor.py  position_tracker.py
coinbase_hft/market_data/: candle_aggregator.py  market_data_store.py  order_book.py  websocket_feed.py
coinbase_hft/monitoring/: alerting.py  health_check.py  metrics.py
coinbase_hft/persistence/: models.py  session_recorder.py  trade_log.py
coinbase_hft/risk/: circuit_breaker.py  pnl_tracker.py  position_limits.py  risk_manager.py
coinbase_hft/strategy/: base_strategy.py  strategy_registry.py
coinbase_hft/strategy/examples/: arbitrage.py  market_making.py  momentum.py  slow_market_maker.py
coinbase_hft/strategy/signals/: microstructure.py  technical.py
coinbase_hft/utils/: decimal_math.py  logging_utils.py  product_info.py  rate_limiter.py  retry.py
tests/: conftest.py
tests/integration/: test_paper_trading_loop.py
tests/strategy/: test_market_making.py  test_slow_market_maker.py
tests/unit/: test_circuit_breaker.py  test_decimal_math.py  test_fill_model.py  test_order_book.py  test_performance.py  test_position_tracker.py  test_risk_manager.py  test_technical_signals.py
